--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 .vscode/
+node_modules/
+
+.env
 
 ### Go Patch ###
 /vendor/
